--- a/readme.html
+++ b/readme.html
@@ -403,24 +403,21 @@ devtools::install_github(&quot;earthsystemdiagnostics/hamstr&quot;, args = &quot
 <pre class="r"><code>library(hamstr)
 library(rstan)
 #&gt; Loading required package: StanHeaders
+#&gt; Loading required package: ggplot2
 #&gt; rstan (Version 2.21.2, GitRev: 2e1f913d3ca3)
 #&gt; For execution on a local, multicore CPU with excess RAM we recommend calling
 #&gt; options(mc.cores = parallel::detectCores()).
 #&gt; To avoid recompilation of unchanged Stan programs, we recommend calling
 #&gt; rstan_options(auto_write = TRUE)
 #&gt; Do not specify &#39;-march=native&#39; in &#39;LOCAL_CPPFLAGS&#39; or a Makevars file
-#&gt; 
-#&gt; Attaching package: &#39;rstan&#39;
-#&gt; The following object is masked from &#39;package:tidyr&#39;:
-#&gt; 
-#&gt;     extract
 library(tidyverse)
-#&gt; -- Attaching packages ------------------------------------------------------------ tidyverse 1.3.0 --
-#&gt; v tibble  3.0.3     v stringr 1.4.0
+#&gt; -- Attaching packages ---------------------------------------------------------- tidyverse 1.3.0 --
+#&gt; v tibble  3.0.3     v dplyr   1.0.2
+#&gt; v tidyr   1.1.2     v stringr 1.4.0
 #&gt; v readr   1.3.1     v forcats 0.5.0
 #&gt; v purrr   0.3.4
-#&gt; -- Conflicts --------------------------------------------------------------- tidyverse_conflicts() --
-#&gt; x rstan::extract() masks tidyr::extract()
+#&gt; -- Conflicts ------------------------------------------------------------- tidyverse_conflicts() --
+#&gt; x tidyr::extract() masks rstan::extract()
 #&gt; x dplyr::filter()  masks stats::filter()
 #&gt; x dplyr::lag()     masks stats::lag()
 
